Problem2/loadbalancerapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancerapi-service
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: 80
  selector:
    app: api
