Problem2/nodeportservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000 # node application is listening on port 3000
      nodePort: 30001   # Choose a port number within the range 30000-32767
  selector:
    app: api       # Match labels to select the pods
